// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConfirmationStep > should not render without exchange transaction 1`] = `<div />`;

exports[`ConfirmationStep > should render 1`] = `
<div>
  <div
    class="flex flex-col space-y-4 sm:space-y-6"
    data-testid="ExchangeForm__confirmation-step"
  >
    <div
      class="condensed"
    >
      <div
        class="sm:border-theme-secondary-300 sm:dark:border-theme-secondary-800 sm:dim:border-theme-dim-700 flex-row items-center sm:flex sm:rounded-lg sm:border"
        data-testid="TransactionId"
      >
        <div
          class="text-theme-secondary-700 sm:bg-theme-secondary-200 dark:text-theme-secondary-500 sm:dim:bg-theme-dim-950 dim:text-theme-dim-200 mb-2 text-sm leading-[17px] font-semibold whitespace-nowrap sm:mb-0 sm:h-full sm:rounded-l-lg sm:px-4 sm:py-3 sm:text-base sm:leading-5 sm:dark:bg-black"
        >
          BTC Transaction ID
        </div>
        <div
          class="flex-1 overflow-hidden font-semibold sm:mx-4"
        >
          <span
            class="no-ligatures min-w-0 overflow-hidden"
          >
            payinHash
          </span>
        </div>
        <div
          class="mt-4 flex items-center space-x-2 sm:mt-0 sm:mr-4"
        >
          <button
            class="ring-focus relative cursor-pointer focus:outline-hidden text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white space-x-0 p-2 dim:border-theme-dim-600 dim:bg-theme-dim-700 dim:text-theme-dim-50"
            data-ring-focus-margin="-m-1"
            data-testid="clipboard-icon__wrapper"
            type="button"
          >
            <div>
              <div
                style="height: 16px; width: 16px;"
              >
                <svg
                  id="copy"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
            </div>
            <span
              class="sm:hidden"
            >
              Copy
            </span>
          </button>
          <button
            class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:text-theme-dark-50 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white border-theme-secondary-300 dark:border-theme-secondary-800 dark:hover:border-theme-primary-500 dim:bg-transparent dim:border-theme-dim-700 dim:text-theme-dim-navy-600 dim-hover:border-theme-dim-navy-700 h-8 w-8 border bg-transparent p-2 hover:border-transparent dark:bg-transparent"
            data-testid="explorer-link"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="mt-6 space-y-3 sm:space-y-4"
      >
        <div
          class="group flex flex-1-mx-3 flex-1 sm:ml-0"
        >
          <div
            class="hidden sm:ml-3 sm:flex"
          >
            <div
              class="min-w-9 flex-row pr-3"
            >
              <div
                class="border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 -mt-2 h-6 w-full rounded-bl-xl border-b-2 border-l-2"
              />
              <div
                class="border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 h-[105%] w-full border-l-2 group-last:hidden"
              />
            </div>
          </div>
          <div
            class="w-full min-w-0 sm:flex-row"
          >
            <div
              data-testid="DetailWrapper"
            >
              <div
                class="border-x-theme-primary-400 dim:border-x-theme-dim-navy-400 bg-theme-secondary-100 dim:bg-theme-dim-950 dim:sm:bg-transparent border-l-2 px-3 py-2 sm:border-none sm:bg-transparent sm:p-0 dark:bg-black dark:sm:bg-transparent"
                data-testid="DetailLabel"
              >
                <div
                  class="no-ligatures text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 min-w-24 font-semibold text-sm leading-[17px] sm:text-base sm:leading-5"
                  data-testid="DetailLabelText"
                >
                  Transaction Information
                </div>
              </div>
              <div
                class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 overflow-hidden rounded-xl sm:border mt-0 sm:mt-2"
              >
                <div
                  class="w-full p-3 break-words sm:px-6 sm:py-5 sm:in-[.condensed]:py-4"
                >
                  <div
                    class="space-y-3"
                  >
                    <div
                      class="space-y-3 sm:space-y-0"
                    >
                      <div
                        class="flex w-full justify-between gap-2 sm:justify-start"
                      >
                        <div
                          class="no-ligatures text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 font-semibold text-sm leading-[17px] sm:text-base sm:leading-5 min-w-[127px] sm:min-w-[207px]"
                          data-testid="DetailLabelText"
                        >
                          <span
                            class="hidden sm:inline"
                          >
                             BTC Address
                          </span>
                          <span
                            class="sm:hidden"
                          >
                            BTC Address
                          </span>
                        </div>
                        <div
                          class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end sm:justify-start"
                        >
                          <div
                            class="relative grow leading-[17px] sm:leading-5 text-left"
                          >
                            <span
                              class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] sm:leading-5 sm:text-base w-full w-3/4 font-semibold text-base absolute w-full"
                              data-testid="Address__address"
                            >
                              payinAddress
                            </span>
                            <span>
                               
                            </span>
                          </div>
                          <button
                            class="ring-focus relative cursor-pointer focus:outline-hidden"
                            data-ring-focus-margin="-m-1"
                            data-testid="clipboard-icon__wrapper"
                            type="button"
                          >
                            <div
                              class="text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50"
                            >
                              <div
                                style="height: 16px; width: 16px;"
                              >
                                <svg
                                  id="copy"
                                  style="height: 100%; width: 100%;"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <path
                                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                    />
                                    <path
                                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                    <div
                      class="space-y-3 sm:space-y-0"
                    >
                      <div
                        class="flex w-full justify-between gap-2 sm:justify-start"
                      >
                        <div
                          class="no-ligatures text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 font-semibold text-sm leading-[17px] sm:text-base sm:leading-5 min-w-[127px] sm:min-w-[207px]"
                          data-testid="DetailLabelText"
                        >
                          Amount
                        </div>
                        <div
                          class="font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:border dark:bg-transparent dark:border-theme-danger-info-border dim:border-theme-danger-info-border dim:text-theme-danger-info-text text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                          data-testid="AmountLabel__wrapper"
                        >
                          <div
                            class="flex h-full items-center space-x-1"
                          >
                            <span
                              class="whitespace-nowrap text-sm"
                              data-testid="Amount"
                            >
                              - 1 BTC
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 h-px w-full border-t border-dashed sm:hidden"
      />
    </div>
    <div
      class="condensed"
    >
      <div
        class="sm:border-theme-secondary-300 sm:dark:border-theme-secondary-800 sm:dim:border-theme-dim-700 flex-row items-center sm:flex sm:rounded-lg sm:border"
        data-testid="TransactionId"
      >
        <div
          class="text-theme-secondary-700 sm:bg-theme-secondary-200 dark:text-theme-secondary-500 sm:dim:bg-theme-dim-950 dim:text-theme-dim-200 mb-2 text-sm leading-[17px] font-semibold whitespace-nowrap sm:mb-0 sm:h-full sm:rounded-l-lg sm:px-4 sm:py-3 sm:text-base sm:leading-5 sm:dark:bg-black"
        >
           Transaction ID
        </div>
        <div
          class="flex-1 overflow-hidden font-semibold sm:mx-4"
        >
          <span
            class="no-ligatures min-w-0 overflow-hidden"
          />
        </div>
        <div
          class="mt-4 flex items-center space-x-2 sm:mt-0 sm:mr-4"
        >
          <button
            class="ring-focus relative cursor-pointer focus:outline-hidden text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white space-x-0 p-2 dim:border-theme-dim-600 dim:bg-theme-dim-700 dim:text-theme-dim-50"
            data-ring-focus-margin="-m-1"
            data-testid="clipboard-icon__wrapper"
            type="button"
          >
            <div>
              <div
                style="height: 16px; width: 16px;"
              >
                <svg
                  id="copy"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
            </div>
            <span
              class="sm:hidden"
            >
              Copy
            </span>
          </button>
          <button
            class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:text-theme-dark-50 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white border-theme-secondary-300 dark:border-theme-secondary-800 dark:hover:border-theme-primary-500 dim:bg-transparent dim:border-theme-dim-700 dim:text-theme-dim-navy-600 dim-hover:border-theme-dim-navy-700 h-8 w-8 border bg-transparent p-2 hover:border-transparent dark:bg-transparent"
            data-testid="explorer-link"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="mt-6 space-y-3 sm:space-y-4"
      >
        <div
          class="group flex flex-1-mx-3 flex-1 sm:ml-0"
        >
          <div
            class="hidden sm:ml-3 sm:flex"
          >
            <div
              class="min-w-9 flex-row pr-3"
            >
              <div
                class="border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 -mt-2 h-6 w-full rounded-bl-xl border-b-2 border-l-2"
              />
              <div
                class="border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 h-[105%] w-full border-l-2 group-last:hidden"
              />
            </div>
          </div>
          <div
            class="w-full min-w-0 sm:flex-row"
          >
            <div
              data-testid="DetailWrapper"
            >
              <div
                class="border-x-theme-primary-400 dim:border-x-theme-dim-navy-400 bg-theme-secondary-100 dim:bg-theme-dim-950 dim:sm:bg-transparent border-l-2 px-3 py-2 sm:border-none sm:bg-transparent sm:p-0 dark:bg-black dark:sm:bg-transparent"
                data-testid="DetailLabel"
              >
                <div
                  class="no-ligatures text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 min-w-24 font-semibold text-sm leading-[17px] sm:text-base sm:leading-5"
                  data-testid="DetailLabelText"
                >
                  Transaction Information
                </div>
              </div>
              <div
                class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 overflow-hidden rounded-xl sm:border mt-0 sm:mt-2"
              >
                <div
                  class="w-full p-3 break-words sm:px-6 sm:py-5 sm:in-[.condensed]:py-4"
                >
                  <div
                    class="space-y-3"
                  >
                    <div
                      class="space-y-3 sm:space-y-0"
                    >
                      <div
                        class="flex w-full justify-between gap-2 sm:justify-start"
                      >
                        <div
                          class="no-ligatures text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 font-semibold text-sm leading-[17px] sm:text-base sm:leading-5 min-w-[127px] sm:min-w-[207px]"
                          data-testid="DetailLabelText"
                        >
                          <span
                            class="hidden sm:inline"
                          >
                            Your  Address
                          </span>
                          <span
                            class="sm:hidden"
                          >
                             Address
                          </span>
                        </div>
                        <div
                          class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end sm:justify-start"
                        >
                          <div
                            class="relative grow leading-[17px] sm:leading-5 text-left"
                          >
                            <span
                              class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] sm:leading-5 sm:text-base w-full w-3/4 font-semibold text-base absolute w-full"
                              data-testid="Address__address"
                            >
                              payoutAddress
                            </span>
                            <span>
                               
                            </span>
                          </div>
                          <button
                            class="ring-focus relative cursor-pointer focus:outline-hidden"
                            data-ring-focus-margin="-m-1"
                            data-testid="clipboard-icon__wrapper"
                            type="button"
                          >
                            <div
                              class="text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50"
                            >
                              <div
                                style="height: 16px; width: 16px;"
                              >
                                <svg
                                  id="copy"
                                  style="height: 100%; width: 100%;"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <path
                                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                    />
                                    <path
                                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                    <div
                      class="space-y-3 sm:space-y-0"
                    >
                      <div
                        class="flex w-full justify-between gap-2 sm:justify-start"
                      >
                        <div
                          class="no-ligatures text-theme-secondary-700 dark:text-theme-secondary-500 dim:text-theme-dim-200 font-semibold text-sm leading-[17px] sm:text-base sm:leading-5 min-w-[127px] sm:min-w-[207px]"
                          data-testid="DetailLabelText"
                        >
                          Amount
                        </div>
                        <div
                          class="font-semibold overflow-hidden no-ligatures bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 dim:border-theme-success-700 dim:text-theme-success-500 text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                          data-testid="AmountLabel__wrapper"
                        >
                          <div
                            class="flex h-full items-center space-x-1"
                          >
                            <span
                              class="whitespace-nowrap text-sm"
                              data-testid="Amount"
                            >
                              + 100 ARK
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExchangeForm > should render exchange form 1`] = `<div />`;

exports[`ExchangeForm > should render exchange form with id of pending order 1`] = `<div />`;

exports[`FormStep > should render 1`] = `
<div>
  <div
    class="flex flex-col space-y-6"
    data-testid="ExchangeForm__form-step"
  >
    <div
      class="flex"
    >
      <div
        class="flex flex-1 flex-col"
      >
        <div
          class="relative z-1 flex"
        >
          <div
            class="max-w-[120px] sm:max-w-[160px]"
          >
            <fieldset
              class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
            >
              <label
                class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex leading-[17px] font-semibold transition-colors duration-100 text-sm"
                data-testid="FormLabel"
                for="fromCurrency"
              >
                Cryptoasset
              </label>
              <div
                class="static sm:relative"
                data-testid="SelectDropdown"
              >
                <div
                  class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 dim:border-theme-dim-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14 sr-only"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base!"
                      data-testid="select-list__input"
                      name="fromCurrency"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="fromCurrency-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="fromCurrency-input"
                        id="fromCurrency-label"
                      />
                      <div
                        class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800 dim:border-theme-dim-700 dim:bg-theme-dim-950 focus-within:ring-1 h-12 overflow-hidden sm:h-14 -mr-px rounded-r-none border-r-0"
                      >
                        <div
                          class="hidden sm:block"
                        >
                          <div
                            class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-8 w-8 px-2 py-1 text-sm ring-0 border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 dim:bg-theme-dim-800 dim:border-theme-dim-800 ring-theme-background duration-100"
                          />
                        </div>
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="fromCurrency-menu"
                            aria-labelledby="fromCurrency-label"
                            autocomplete="off"
                            class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base! text-theme-secondary-text cursor-default"
                            data-testid="SelectDropdown__input"
                            disabled=""
                            id="fromCurrency-input"
                            name="fromCurrency"
                            placeholder="Select"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="divide-theme-secondary-300 dark:divide-theme-secondary-800 dim:divide-theme-dim-700 flex items-center divide-x text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center"
                            >
                              <div
                                class="flex items-center justify-center"
                                data-testid="SelectDropdown__caret"
                              >
                                <div
                                  class="absolute inset-0 block cursor-pointer md:hidden"
                                />
                                <div
                                  class="transition-transform text-theme-secondary-500"
                                >
                                  <div
                                    style="height: 10px; width: 10px;"
                                  >
                                    <svg
                                      id="chevron-down-small"
                                      style="height: 100%; width: 100%;"
                                      viewBox="0 0 10 10"
                                      x="0"
                                      xml:space="preserve"
                                      xmlns="http://www.w3.org/2000/svg"
                                      y="0"
                                    >
                                      <path
                                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                        fill="none"
                                        stroke="currentColor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="2"
                                      />
                                    </svg>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="fromCurrency-label"
                      id="fromCurrency-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </fieldset>
          </div>
          <div
            class="flex-1"
          >
            <fieldset
              class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
            >
              <label
                class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex leading-[17px] font-semibold transition-colors duration-100 text-sm"
                data-testid="FormLabel"
                for="payinAmount"
              >
                You Send
              </label>
              <div
                class="relative"
              >
                <div
                  class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 dim:border-theme-dim-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14 rounded-l-none"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base!"
                      data-testid="InputCurrency"
                      name="payinAmount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </fieldset>
          </div>
        </div>
        <div
          class="bg-theme-secondary-200 dark:bg-theme-dark-950 dim:bg-theme-dim-950 z-0 -mt-1 mb-4 rounded-b px-4 pt-4 pb-3 text-xs leading-[15px] font-semibold"
        >
          <span
            class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200"
          >
            Estimated Rate
            :
          </span>
          <span
            class="text-theme-secondary-900 dark:text-theme-dark-50 dim:text-theme-dim-50 ml-2"
          >
            <span>
              N/A
            </span>
          </span>
        </div>
        <div
          class="relative mb-4 flex items-center space-x-3 sm:hidden"
        >
          <span
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 block flex-1 border-t-2"
          />
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 dim:disabled:bg-theme-dim-700 dim:disabled:text-theme-secondary-600 ml-auto h-11 w-11 shrink-0"
            data-testid="ExchangeForm__swap-button-mobile"
            disabled=""
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 10px; width: 10px;"
                >
                  <svg
                    id="arrow-down-up"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M5 2v17m4-4l-4 4-4-4m14 3V1m-4 4l4-4 4 4"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </button>
          <span
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 block flex-1 border-t-2"
          />
        </div>
        <div
          class="space-y-6"
        >
          <div
            class="relative flex"
          >
            <div
              class="max-w-[120px] sm:max-w-[160px]"
            >
              <fieldset
                class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex leading-[17px] font-semibold transition-colors duration-100 text-sm"
                  data-testid="FormLabel"
                  for="toCurrency"
                >
                  Cryptoasset
                </label>
                <div
                  class="static sm:relative"
                  data-testid="SelectDropdown"
                >
                  <div
                    class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 dim:border-theme-dim-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14 sr-only"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base!"
                        data-testid="select-list__input"
                        name="toCurrency"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="w-full"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-owns="toCurrency-menu"
                      role="combobox"
                    >
                      <div>
                        <label
                          for="toCurrency-input"
                          id="toCurrency-label"
                        />
                        <div
                          class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800 dim:border-theme-dim-700 dim:bg-theme-dim-950 focus-within:ring-1 h-12 overflow-hidden sm:h-14 -mr-px rounded-r-none border-r-0"
                        >
                          <div
                            class="hidden sm:block"
                          >
                            <div
                              class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-8 w-8 px-2 py-1 text-sm ring-0 border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 dim:bg-theme-dim-800 dim:border-theme-dim-800 ring-theme-background duration-100"
                            />
                          </div>
                          <div
                            class="relative flex h-full flex-1"
                          >
                            <input
                              aria-autocomplete="list"
                              aria-controls="toCurrency-menu"
                              aria-labelledby="toCurrency-label"
                              autocomplete="off"
                              class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base! text-theme-secondary-text cursor-default"
                              data-testid="SelectDropdown__input"
                              disabled=""
                              id="toCurrency-input"
                              name="toCurrency"
                              placeholder="Select"
                              type="text"
                              value=""
                            />
                          </div>
                          <div
                            class="divide-theme-secondary-300 dark:divide-theme-secondary-800 dim:divide-theme-dim-700 flex items-center divide-x text-theme-primary-300 dark:text-theme-secondary-600"
                            data-testid="Input__addon-end"
                          >
                            <div
                              class=""
                            >
                              <div
                                class="flex items-center"
                              >
                                <div
                                  class="flex items-center justify-center"
                                  data-testid="SelectDropdown__caret"
                                >
                                  <div
                                    class="absolute inset-0 block cursor-pointer md:hidden"
                                  />
                                  <div
                                    class="transition-transform text-theme-secondary-500"
                                  >
                                    <div
                                      style="height: 10px; width: 10px;"
                                    >
                                      <svg
                                        id="chevron-down-small"
                                        style="height: 100%; width: 100%;"
                                        viewBox="0 0 10 10"
                                        x="0"
                                        xml:space="preserve"
                                        xmlns="http://www.w3.org/2000/svg"
                                        y="0"
                                      >
                                        <path
                                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                          fill="none"
                                          stroke="currentColor"
                                          stroke-linecap="round"
                                          stroke-linejoin="round"
                                          stroke-width="2"
                                        />
                                      </svg>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-labelledby="toCurrency-label"
                        id="toCurrency-menu"
                        role="listbox"
                      />
                    </div>
                  </div>
                </div>
              </fieldset>
            </div>
            <div
              class="flex-1"
            >
              <fieldset
                class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex leading-[17px] font-semibold transition-colors duration-100 text-sm"
                  data-testid="FormLabel"
                  for="payoutAmount"
                >
                  You Get
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 dim:border-theme-dim-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14 rounded-l-none"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base!"
                        data-testid="InputCurrency"
                        name="payoutAmount"
                        placeholder="Enter an amount"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative mt-[47px] ml-1.5 hidden h-[142px] flex-col space-y-[7px] sm:flex"
      >
        <span
          class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 block h-[53px] w-[26px] rounded-tr-xl border-t-2 border-r-2"
        />
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 dim:disabled:bg-theme-dim-700 dim:disabled:text-theme-secondary-600 ml-auto h-11 w-11 shrink-0"
          data-testid="ExchangeForm__swap-button"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center gap-2"
          >
            <div>
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="arrow-down-up"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M5 2v17m4-4l-4 4-4-4m14 3V1m-4 4l4-4 4 4"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <span
          class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 block h-[53px] w-[26px] rounded-br-xl border-r-2 border-b-2"
        />
      </div>
    </div>
    <div
      data-testid="ExchangeForm__recipient-address"
    >
      <fieldset
        class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
      >
        <label
          class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex leading-[17px] font-semibold transition-colors duration-100 text-sm"
          data-testid="FormLabel"
          for="recipientWallet"
        >
          <div
            class="flex w-full justify-between"
          >
            Recipient Wallet
            <button
              class="link text-theme-navy-600! dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-500 text-sm font-semibold"
              data-testid="ExchangeForm__add-refund-address"
              type="button"
            >
              +
              Add Refund Address
            </button>
          </div>
        </label>
        <div>
          <div
            class="relative flex w-full items-center text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="relative w-full"
              data-testid="SelectDropdown"
            >
              <div
                class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 dim:border-theme-dim-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14 sr-only"
              >
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base!"
                    data-testid="select-list__input"
                    name="recipientWallet"
                    readonly=""
                    tabindex="-1"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="w-full"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="SelectRecipient__dropdown-menu"
                  role="combobox"
                >
                  <div>
                    <label
                      for="SelectRecipient__dropdown-input"
                      id="SelectRecipient__dropdown-label"
                    />
                    <div
                      class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800 dim:border-theme-dim-700 dim:bg-theme-dim-950 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="SelectRecipient__dropdown-menu"
                          aria-invalid="false"
                          aria-labelledby="SelectRecipient__dropdown-label"
                          autocomplete="off"
                          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base! cursor-default text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-200"
                          data-testid="SelectDropdown__input"
                          disabled=""
                          id="SelectRecipient__dropdown-input"
                          name="recipientWallet"
                          placeholder="Enter the payout address"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    aria-labelledby="SelectRecipient__dropdown-label"
                    id="SelectRecipient__dropdown-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`ReviewStep > should render 1`] = `
<div>
  <div
    class="space-y-4 sm:space-y-6"
    data-testid="ExchangeForm__review-step"
  >
    <div
      class="flex flex-col space-y-2"
    >
      <div
        class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 flex flex-col space-y-3 overflow-hidden rounded border-b border-dashed pb-4 font-semibold last:border-b-0 last:pb-0 sm:rounded-xl sm:border sm:border-solid sm:px-6 sm:py-5 sm:last:border-b sm:last:pb-5"
      >
        <div
          class="flex gap-1 text-sm sm:text-base"
        >
          <span
            class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 min-w-[112px] font-semibold"
          >
            You Send
          </span>
          <span
            class="whitespace-nowrap font-semibold"
            data-testid="Amount"
          >
            1 BTC
          </span>
        </div>
        <div
          class="bg-theme-secondary-200 dark:bg-theme-dark-950 dim:bg-theme-dim-950 text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 px-4 py-2 text-sm font-semibold sm:-mx-6 sm:-mb-6 sm:px-6 sm:py-3"
        >
          1 
          BTC
           ≈ 
          <span
            class="whitespace-nowrap"
            data-testid="Amount"
          >
            NaN ARK
          </span>
        </div>
      </div>
      <div
        class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 flex flex-col space-y-3 overflow-hidden rounded border-b border-dashed pb-4 font-semibold last:border-b-0 last:pb-0 sm:rounded-xl sm:border sm:border-solid sm:px-6 sm:py-5 sm:last:border-b sm:last:pb-5"
      >
        <div
          class="flex gap-1 text-sm sm:text-base"
        >
          <span
            class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 min-w-[112px] font-semibold"
          >
            You Get
          </span>
          <span
            class="text-theme-secondary-900 dark:text-theme-dark-50 dim:text-theme-dim-50 font-semibold"
          >
            ≈ 
            <span
              class="whitespace-nowrap font-semibold"
              data-testid="Amount"
            >
              1 ARK
            </span>
          </span>
        </div>
        <div
          class="flex gap-1 text-sm sm:text-base"
        >
          <span
            class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 min-w-[112px] font-semibold"
          >
            Address
          </span>
          <span
            class="no-ligatures min-w-0 overflow-hidden no-ligatures text-theme-secondary-900 dark:text-theme-dark-50 dim:text-theme-dim-50 font-semibold"
          >
            AYx3T2He3Ubz7H5pycQNG2Cvn6HYzeiC73
          </span>
        </div>
      </div>
    </div>
    <div
      class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 h-px w-full border-t border-dashed"
    />
    <div>
      <fieldset
        class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 sm:pt-2"
      >
        <label
          class="flex cursor-pointer items-center space-x-3"
        >
          <input
            class="custom-checkbox focus:ring-theme-primary-400! h-5! w-5! cursor-pointer rounded! border-2! transition duration-150 ease-in-out focus:ring-offset-0! not-checked:border-theme-secondary-300 not-checked:bg-white! dark:not-checked:border-theme-dark-500 dark:not-checked:bg-theme-dark-900! dim:not-checked:border-theme-dim-500 dim:not-checked:bg-theme-dim-900! disabled:border-theme-secondary-300 disabled:bg-theme-secondary-200 disabled:checked:border-theme-secondary-300 disabled:checked:bg-theme-secondary-200 disabled:checked:text-theme-secondary-300 dark:disabled:border-theme-dark-600 dark:disabled:bg-theme-dark-800 dark:disabled:checked:border-theme-dark-600 dark:disabled:checked:bg-theme-dark-800 dark:disabled:checked:text-theme-dark-600 dim:disabled:border-theme-dim-600 dim:disabled:bg-theme-dim-800 dim:disabled:checked:border-theme-dim-600 dim:disabled:checked:bg-theme-dim-800 dim:disabled:checked:text-theme-dim-600 disabled:cursor-not-allowed checked:text-theme-primary-600 checked:hover:text-theme-primary-700 dark:checked:checked:text-theme-dark-navy-500 dark:checked:hover:text-theme-dark-navy-600 not-checked:hover:border-theme-primary-600 dark:not-checked:hover:border-theme-dark-navy-500 dim:checked:text-theme-dim-navy-600 dim-hover:checked:text-theme-dim-navy-700 dim-hover:not-checked:border-theme-dim-navy-600"
            name="hasAgreedToTerms"
            type="checkbox"
          />
          <span
            class="text-sm leading-5"
          >
            I've read and agree to the ChangeNOW 
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href="https://changenow.io/terms-of-use"
              rel="noopener noreferrer"
            >
              <span
                class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
              >
                Terms of Use
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
             and 
            <a
              class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href="https://changenow.io/privacy-policy"
              rel="noopener noreferrer"
            >
              <span
                class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
              >
                Privacy Policy
              </span>
              <div
                class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                data-testid="Link__external"
              >
                <div
                  style="height: 12px; width: 12px;"
                >
                  <svg
                    id="arrow-external"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </a>
          </span>
        </label>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`StatusStep > should render 1`] = `
<div>
  <div
    class="flex flex-col"
    data-testid="ExchangeForm__status-step"
  >
    <div
      class="flex items-center space-x-1"
    >
      <span
        class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-xs font-semibold"
      >
        ChangeNOW
         
        Transaction ID
        : 
        id
      </span>
      <span
        class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 flex"
      >
        <button
          class="ring-focus relative cursor-pointer focus:outline-hidden"
          data-ring-focus-margin="-m-1"
          data-testid="clipboard-icon__wrapper"
          type="button"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="copy"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                  />
                  <path
                    d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
      </span>
    </div>
    <div
      class="mt-2 flex flex-col space-y-2"
    >
      <div
        class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 flex flex-col space-y-3 overflow-hidden rounded border-b border-dashed pb-4 font-semibold last:border-b-0 last:pb-0 sm:rounded-xl sm:border sm:border-solid sm:px-6 sm:py-5 sm:last:border-b sm:last:pb-5"
      >
        <div
          class="flex gap-1 text-sm sm:text-base"
        >
          <span
            class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 min-w-[112px] font-semibold"
          >
            You Send
          </span>
          <span
            class="whitespace-nowrap font-semibold"
            data-testid="Amount"
          >
            1 BTC
          </span>
        </div>
        <div
          class="flex gap-1 text-sm sm:text-base"
        >
          <span
            class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 min-w-[112px] font-semibold"
          >
            To Address
          </span>
          <div
            class="text-theme-secondary-900 dark:text-theme-dark-50 dim:text-theme-dim-50 flex space-x-2 font-semibold"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden no-ligatures"
            >
              payinAddress
            </span>
            <span
              class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 flex"
            >
              <button
                class="ring-focus relative cursor-pointer focus:outline-hidden"
                data-ring-focus-margin="-m-1"
                data-testid="clipboard-icon__wrapper"
                type="button"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="copy"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                        />
                        <path
                          d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </button>
            </span>
          </div>
        </div>
        <div
          class="flex gap-1 text-sm sm:text-base"
        >
          <span
            class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 min-w-[112px] font-semibold"
          >
            ARK Transaction ID
          </span>
          <div
            class="text-theme-secondary-900 dark:text-theme-dark-50 dim:text-theme-dim-50 flex space-x-2 font-semibold"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden no-ligatures"
            >
              transferTransactionId
            </span>
            <span
              class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 flex"
            >
              <button
                class="ring-focus relative cursor-pointer focus:outline-hidden"
                data-ring-focus-margin="-m-1"
                data-testid="clipboard-icon__wrapper"
                type="button"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="copy"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                        />
                        <path
                          d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="items-top mt-2 mb-4 flex flex-col space-y-1 overflow-hidden pt-1.5 sm:mb-6 sm:justify-center sm:space-y-4 sm:px-6"
    >
      <div
        class="relative flex items-center overflow-hidden rounded-lg border px-3 py-2 sm:-mt-[22px] sm:rounded-none sm:border-none sm:bg-transparent! sm:pt-[22px] sm:pr-0 sm:pb-0 sm:pl-[38px] bg-theme-warning-50 border-theme-warning-200 dark:border-theme-warning-600 dim:bg-transparent dim:border-theme-warning-600 dark:bg-transparent"
      >
        <span
          class="border-theme-secondary-300 dim:border-theme-dim-700 dark:border-theme-dark-700 absolute top-0 left-0 hidden h-[35px] w-[26px] rounded-bl-xl border-b-2 border-l-2 sm:inline"
        />
        <span>
          <span
            data-testid="StatusIcon__spinner"
          >
            <div
              class="animate-spin rounded-full shrink-0 w-8 h-8 border-[4px] border-theme-warning-200 dark:border-theme-dark-700 dim:border-theme-dim-700 dark:border-l-theme-warning-900 dim:border-l-theme-warning-900 border-l-theme-warning-900 h-4! w-4! border-[2px]! sm:h-5! sm:w-5! sm:border-[3px]!"
            />
          </span>
        </span>
        <span
          class="ml-2 font-semibold whitespace-nowrap sm:ml-3 text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200"
        >
          Awaiting Deposit
        </span>
      </div>
      <div
        class="relative flex items-center overflow-hidden rounded-lg border px-3 py-2 sm:-mt-[22px] sm:rounded-none sm:border-none sm:bg-transparent! sm:pt-[22px] sm:pr-0 sm:pb-0 sm:pl-[38px] bg-theme-secondary-100 border-theme-secondary-300 dark:border-theme-secondary-700 dim:bg-transparent dim:border-theme-secondary-700 dark:bg-transparent"
      >
        <span
          class="border-theme-secondary-300 dim:border-theme-dim-700 dark:border-theme-dark-700 absolute top-0 left-0 hidden h-[35px] w-[26px] rounded-bl-xl border-b-2 border-l-2 sm:inline"
        />
        <span>
          <div
            class="bg-theme-secondary-200 dark:bg-theme-dark-800 dim:bg-theme-dim-800 h-4 w-4 rounded-full sm:h-5 sm:w-5"
            data-testid="StatusIcon__empty"
          />
        </span>
        <span
          class="ml-2 font-semibold whitespace-nowrap sm:ml-3 text-theme-secondary-500 dark:text-theme-dark-500 dim:text-theme-dim-500"
        >
          Exchanging
        </span>
      </div>
      <div
        class="relative flex items-center overflow-hidden rounded-lg border px-3 py-2 sm:-mt-[22px] sm:rounded-none sm:border-none sm:bg-transparent! sm:pt-[22px] sm:pr-0 sm:pb-0 sm:pl-[38px] bg-theme-secondary-100 border-theme-secondary-300 dark:border-theme-secondary-700 dim:bg-transparent dim:border-theme-secondary-700 dark:bg-transparent"
      >
        <span
          class="border-theme-secondary-300 dim:border-theme-dim-700 dark:border-theme-dark-700 absolute top-0 left-0 hidden h-[35px] w-[26px] rounded-bl-xl border-b-2 border-l-2 sm:inline"
        />
        <span>
          <div
            class="bg-theme-secondary-200 dark:bg-theme-dark-800 dim:bg-theme-dim-800 h-4 w-4 rounded-full sm:h-5 sm:w-5"
            data-testid="StatusIcon__empty"
          />
        </span>
        <span
          class="ml-2 font-semibold whitespace-nowrap sm:ml-3 text-theme-secondary-500 dark:text-theme-dark-500 dim:text-theme-dim-500"
        >
          Sending to you
        </span>
      </div>
    </div>
    <div
      class="flex flex-col space-y-2"
    >
      <div
        class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 flex flex-col space-y-3 overflow-hidden rounded border-b border-dashed pb-4 font-semibold last:border-b-0 last:pb-0 sm:rounded-xl sm:border sm:border-solid sm:px-6 sm:py-5 sm:last:border-b sm:last:pb-5"
      >
        <div
          class="flex gap-1 text-sm sm:text-base"
        >
          <span
            class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 min-w-[112px] font-semibold"
          >
            You Get
          </span>
          ≈
          <span
            class="whitespace-nowrap font-semibold"
            data-testid="Amount"
          >
            100 ARK
          </span>
        </div>
        <div
          class="flex gap-1 text-sm sm:text-base"
        >
          <span
            class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 min-w-[112px] font-semibold"
          >
            To Address
          </span>
          <div
            class="text-theme-secondary-900 dark:text-theme-dark-50 dim:text-theme-dim-50 flex space-x-2 font-semibold"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden no-ligatures"
            >
              payoutAddress
            </span>
            <span
              class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 flex"
            >
              <button
                class="ring-focus relative cursor-pointer focus:outline-hidden"
                data-ring-focus-margin="-m-1"
                data-testid="clipboard-icon__wrapper"
                type="button"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="copy"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                        />
                        <path
                          d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bg-theme-secondary-200 text-theme-secondary-700 dark:bg-theme-dark-950 dim:bg-theme-dim-950 dim:text-theme-dim-200 dark:text-theme-dark-200 mt-2 rounded-xl px-4 py-3 text-xs font-semibold"
    >
      If you have any question about your exchange, please contact ChangeNOW support team via email at 
      <a
        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner inline-block"
        data-ring-focus-margin="-m-1"
        data-testid="Link"
        href="mailto:support@changenow.io"
        rel="noopener noreferrer"
      >
        <span
          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
        >
          support@changenow.io
        </span>
        <div
          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
          data-testid="Link__external"
        >
          <div
            style="height: 12px; width: 12px;"
          >
            <svg
              id="arrow-external"
              style="height: 100%; width: 100%;"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;
